--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,50 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:id="@+id/layout"
   tools:context=".MainActivity">
 
 
+  <ListView
+    android:id="@+id/rolls"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toTopOf="@id/tally"/>
+
+
+<!--  <TextView-->
+<!--    android:id="@+id/tally"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    style="@style/Tally"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintStart_toStartOf="parent"/>-->
+
   <TextView
+    android:id="@+id/tally"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@string/hello_world"
-    android:textColor="#0ff0ff"
-    android:textSize="20pt"
+    style="@style/Tally"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    />
+
+<!--  <TextView-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:text="@string/hello_world"-->
+<!--    android:textColor="#0ff0ff"-->
+<!--    android:textSize="20pt"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintLeft_toLeftOf="parent"-->
+<!--    app:layout_constraintRight_toRightOf="parent"-->
+<!--    android:id="@+id/hello_world"-->
+<!--    app:layout_constraintTop_toTopOf="parent"/>-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
