--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,5 +15,17 @@
     <item name="android:textSize">20sp</item>
     <item name="android:textStyle">bold</item>
     <item name="android:layout_margin">20sp</item>
+
+  </style>
+
+  <style name="DiceImage" parent="AppTheme">
+    <item name="android:layout_margin">8dp</item>
+
+  </style>
+
+  <style name="DiceSum" parent="AppTheme">
+    <item name="android:textSize">20sp</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:layout_width">50dp</item>
   </style>
 </resources>
