--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
   <color name="colorPrimary">#008577</color>
   <color name="colorPrimaryDark">#00574B</color>
   <color name="colorAccent">#D81B60</color>
+  <color name="winningRound">#4000ff00</color>
+  <color name="losingRound">#90ff0000</color>
   <color name="white">#FFFFFFFF</color>
 </resources>
