added timer and slowdown to play method

--- a/app/src/main/res/menu/options.xml
+++ b/app/src/main/res/menu/options.xml
@@ -2,16 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
+  <item android:title="@string/slow_down"
+    android:icon="@drawable/ic_slow_down"
+    app:showAsAction="always"
+    android:id="@+id/slow_down"
+  />
   <item android:title="@string/play_one"
     android:icon="@drawable/ic_play_one"
     app:showAsAction="always"
     android:id="@+id/play_one"
-    />
-
-  <item android:title="@string/fast_forward"
-    android:icon="@drawable/ic_fast_forward"
-    android:id="@+id/fast_forward"
-    app:showAsAction="always"
     />
 
   <item android:title="@string/pause"
@@ -20,6 +19,12 @@
     android:id="@+id/pause"
     app:showAsAction="always"
     />
+  <item android:title="@string/fast_forward"
+    android:icon="@drawable/ic_fast_forward"
+    android:id="@+id/fast_forward"
+    app:showAsAction="always"
+    />
+
 
   <item android:title="@string/reset"
     android:icon="@drawable/ic_reset"
